--- a/src/vstboard/mainwindow.ui
+++ b/src/vstboard/mainwindow.ui
@@ -29,7 +29,7 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_13">
+   <layout class="QVBoxLayout" name="verticalLayout_9">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -38,20 +38,8 @@
     </property>
     <item>
      <widget class="QSplitter" name="splitterPanels">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
-      </property>
-      <property name="childrenCollapsible">
-       <bool>false</bool>
       </property>
       <widget class="QGroupBox" name="HostBox">
        <property name="title">
@@ -139,112 +127,6 @@
           </property>
           <property name="whatsThis">
            <string>The Host panel is where you normally put your audio and midi interfaces.</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::NoFrame</enum>
-          </property>
-          <property name="verticalScrollBarPolicy">
-           <enum>Qt::ScrollBarAlwaysOff</enum>
-          </property>
-          <property name="horizontalScrollBarPolicy">
-           <enum>Qt::ScrollBarAlwaysOff</enum>
-          </property>
-          <property name="renderHints">
-           <set>QPainter::Antialiasing|QPainter::TextAntialiasing</set>
-          </property>
-          <property name="dragMode">
-           <enum>QGraphicsView::ScrollHandDrag</enum>
-          </property>
-          <property name="resizeAnchor">
-           <enum>QGraphicsView::AnchorUnderMouse</enum>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QGroupBox" name="ProjectBox">
-       <property name="title">
-        <string>Project Panel</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="flat">
-        <bool>true</bool>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <property name="spacing">
-         <number>0</number>
-        </property>
-        <property name="margin">
-         <number>0</number>
-        </property>
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout_11">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QPushButton" name="pushZoomIn_3">
-            <property name="toolTip">
-             <string>Zoom In</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../resources/resources.qrc">
-              <normaloff>:/img16x16/viewmag+.png</normaloff>:/img16x16/viewmag+.png</iconset>
-            </property>
-            <property name="autoRepeat">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushZoomReset_3">
-            <property name="toolTip">
-             <string>Reset Zoom</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../resources/resources.qrc">
-              <normaloff>:/img16x16/viewmagfit.png</normaloff>:/img16x16/viewmagfit.png</iconset>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushZoomOut_3">
-            <property name="toolTip">
-             <string>Zoom Out</string>
-            </property>
-            <property name="icon">
-             <iconset resource="../resources/resources.qrc">
-              <normaloff>:/img16x16/viewmag-.png</normaloff>:/img16x16/viewmag-.png</iconset>
-            </property>
-            <property name="autoRepeat">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="MainGraphicsView" name="projectView">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
           </property>
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
@@ -368,6 +250,112 @@
         </item>
        </layout>
       </widget>
+      <widget class="QGroupBox" name="InsertBox">
+       <property name="title">
+        <string>Insert Panel</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_11">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QPushButton" name="pushZoomIn_3">
+            <property name="toolTip">
+             <string>Zoom In</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../resources/resources.qrc">
+              <normaloff>:/img16x16/viewmag+.png</normaloff>:/img16x16/viewmag+.png</iconset>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushZoomReset_3">
+            <property name="toolTip">
+             <string>Reset Zoom</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../resources/resources.qrc">
+              <normaloff>:/img16x16/viewmagfit.png</normaloff>:/img16x16/viewmagfit.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushZoomOut_3">
+            <property name="toolTip">
+             <string>Zoom Out</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../resources/resources.qrc">
+              <normaloff>:/img16x16/viewmag-.png</normaloff>:/img16x16/viewmag-.png</iconset>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="MainGraphicsView" name="insertView">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="verticalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="horizontalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="renderHints">
+           <set>QPainter::Antialiasing|QPainter::TextAntialiasing</set>
+          </property>
+          <property name="dragMode">
+           <enum>QGraphicsView::ScrollHandDrag</enum>
+          </property>
+          <property name="resizeAnchor">
+           <enum>QGraphicsView::AnchorUnderMouse</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -386,7 +374,7 @@
      <string>View</string>
     </property>
     <addaction name="actionHost_panel"/>
-    <addaction name="actionProject_panel"/>
+    <addaction name="actionInsert_panel"/>
     <addaction name="actionProgram_panel"/>
     <addaction name="separator"/>
     <addaction name="actionRestore_default_layout"/>
@@ -453,8 +441,8 @@
    <addaction name="actionConfig"/>
    <addaction name="separator"/>
    <addaction name="actionHost_panel"/>
-   <addaction name="actionProject_panel"/>
    <addaction name="actionProgram_panel"/>
+   <addaction name="actionInsert_panel"/>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="enabled">
@@ -886,7 +874,7 @@
     <string>Save Project</string>
    </property>
    <property name="statusTip">
-    <string>Save the project and program panels in a project file</string>
+    <string>Save the program and insert panels in a project file</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -916,7 +904,7 @@
     <string>New Project</string>
    </property>
    <property name="statusTip">
-    <string>Clear the project panel and the program panel</string>
+    <string>Clear the program and insert panels</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
@@ -1053,7 +1041,7 @@
     <string>Alt+Shift+S</string>
    </property>
   </action>
-  <action name="actionProject_panel">
+  <action name="actionInsert_panel">
    <property name="checkable">
     <bool>true</bool>
    </property>
@@ -1065,13 +1053,16 @@
      <normaloff>:/img16x16/file_setup.png</normaloff>:/img16x16/file_setup.png</iconset>
    </property>
    <property name="text">
-    <string>Toggle Project panel</string>
+    <string>Toggle Insert panel</string>
+   </property>
+   <property name="toolTip">
+    <string>Toggle Insert panel</string>
    </property>
    <property name="statusTip">
-    <string>Show or hide the project panel</string>
+    <string>Show or hide the insert panel</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+R</string>
+    <string>Ctrl+I</string>
    </property>
   </action>
   <action name="actionProgram_panel">
@@ -1191,7 +1182,7 @@
   <connection>
    <sender>pushZoomIn_3</sender>
    <signal>pressed()</signal>
-   <receiver>projectView</receiver>
+   <receiver>insertView</receiver>
    <slot>zoomIn()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -1207,7 +1198,7 @@
   <connection>
    <sender>pushZoomReset_3</sender>
    <signal>clicked()</signal>
-   <receiver>projectView</receiver>
+   <receiver>insertView</receiver>
    <slot>zoomReset()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -1223,7 +1214,7 @@
   <connection>
    <sender>pushZoomOut_3</sender>
    <signal>pressed()</signal>
-   <receiver>projectView</receiver>
+   <receiver>insertView</receiver>
    <slot>zoomOut()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -1301,9 +1292,9 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionProject_panel</sender>
+   <sender>actionInsert_panel</sender>
    <signal>toggled(bool)</signal>
-   <receiver>ProjectBox</receiver>
+   <receiver>InsertBox</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
